--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.3",
+    "i": "^0.3.7",
+    "nodemon": "^3.1.0"
+  }
 }
