--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
 }
