--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bunyan": "^1.8.15",
     "express": "^4.18.3",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
